--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal - Edisson Ruiz - WDD 230</title>
     <meta name="Description" content="Assignment portal for Edisson Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="styles/portal.css">
 </head>
 
 <body>
     <header>
-
+        <img src="images/edisson-ruiz.jpg" alt="Edisson Ruiz" loading="lazy" width="120" height="150">
+        <h1> Edisson J. Ruiz</h1>
     </header>
+    
     <main>
-
+        <h2>WDD 230: Assignment Portal</h2>
+        <div class="line"></div>
+        <ul>
+            <li>Lesson 02: <a href=""></a>Title</li>
+            <li>Lesson 03: <a href=""></a>Title</li>
+            <li>Lesson 04: <a href=""></a>Title</li>
+            <li>Lesson 05: <a href=""></a>Title</li>
+            <li>Lesson 06: <a href=""></a>Title</li>
+            <li>Lesson 07: <a href=""></a>Title</li>
+            <li>Lesson 08: <a href=""></a>Title</li>
+            <li>Lesson 09: <a href=""></a>Title</li>
+            <li>Lesson 10: <a href=""></a>Title</li>
+            <li>Lesson 11: <a href=""></a>Title</li>
+        </ul>
     </main>
-    <footer>
 
+    <footer>
+        <p>&copy; 2023 .:|:. Edisson J. Ruiz .:|:. Provo, Utah</span></p>
+        <p class="lastModif" id="lastModified"></p>
     </footer>
+
+    <script src="scripts/portal.js">Title</script>
 </body>
 </html>
