--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal - Edisson Ruiz - WDD 230</title>
     <meta name="Description" content="Assignment portal for Edisson Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link rel="stylesheet" href="styles/portal.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
 </head>
 
 <body>
     <header>
-        <img src="images/edisson-ruiz.jpg" alt="Edisson Ruiz" loading="lazy" width="120" height="150">
+        <img src="images/edisson-ruiz.jpg" alt="Edisson Ruiz">
         <h1> Edisson J. Ruiz</h1>
     </header>
     
