desing principles done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>WDD 230: Assignment Portal</h2>
         <div class="line"></div>
         <ul>
-            <li>Lesson 02: <a href=""></a>Title</li>
+            <li>Lesson 02: <a href="https://yuriro21.github.io/wdd230/lesson2/desing-principles.html" target="_blank">Desing Principles</a></li>
             <li>Lesson 03: <a href=""></a>Title</li>
             <li>Lesson 04: <a href=""></a>Title</li>
             <li>Lesson 05: <a href=""></a>Title</li>
@@ -35,10 +35,10 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 .:|:. Edisson J. Ruiz .:|:. Provo, Utah</span></p>
+        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</span></p>
         <p class="lastModif" id="lastModified"></p>
     </footer>
 
-    <script src="scripts/portal.js">Title</script>
+    <script src="./scripts/portal.js"></script>
 </body>
 </html>
