--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</span></p>
+        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</p>
         <p class="lastModif" id="lastModified"></p>
     </footer>
 
