--- a/lesson2/desing-principles.html
+++ b/lesson2/desing-principles.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Desing Principles Document</h1>
-        <h2>Edisson J. Ruiz</h1>
+        <h2>Edisson J. Ruiz</h2>
     </header> 
     
     <main>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</span></p>
+        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</p>
         <p class="lastModif" id="lastModified"></p>
     </footer>
 
