--- a/lesson2/desing-principles.html
+++ b/lesson2/desing-principles.html
@@ -28,14 +28,14 @@
 
        <section class="Hick"> 
         <h4>Hick's Law</h4>
-        <p>Amazon <br><a href="https://www.amazon.com/Best-Sellers-Computers-Accessories/zgbs/pc/ref=zg_bs_nav_0">amazon.com</a></p>
+        <p>Amazon <br><a href="https://www.amazon.com/Best-Sellers-Computers-Accessories/zgbs/pc/ref=zg_bs_nav_0" target="_blank">amazon.com</a></p>
         <img src="images/hicks-law.png" alt="amazon page">
         <p>Hick’s Law says that every additional choice increases the time required to take a decision.  We need to eliminate choices. To make a better web design, focus on eliminating distracting options throughout the design process.  In an era of infinite choice, people need better filters! If you sell a huge number of products, add better filters for easier decision-making. On the left side, we can see this tool.</p>
        </section>
 
        <section class="Fitt">
         <h5>Fitt's Law</h5>
-        <p>Amazon <br><a href="https://www.amazon.com/Preserved-Languages-Enchanted-Valentines-Christmas/dp/B091Q17CGW/ref=sxin_24_pa_sp_search_thematic_sspa?content-id=amzn1.sym.7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6%3Aamzn1.sym.7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6&crid=3VACMPYV2XF86&cv_ct_cx=mothers%2Bday%2Bgifts&keywords=mothers%2Bday%2Bgifts&pd_rd_i=B091Q17CGW&pd_rd_r=a703865d-4524-4e21-a560-4b80c1d3a018&pd_rd_w=7nW8v&pd_rd_wg=hk1Ai&pf_rd_p=7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6&pf_rd_r=TE02Y8A1N5WZS9P5F82R&qid=1682778050&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=%2Caps%2C111&sr=1-2-f0df0a56-b883-423b-8e85-dd7f53bef7cf-spons&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExWUNaTVc5SFQwTlA2JmVuY3J5cHRlZElkPUEwMzUzMjgyM0w2RVVLRUZCSVpJWCZlbmNyeXB0ZWRBZElkPUEwNjc5MjQ1M01LSUxCVTVIRU4zVyZ3aWRnZXROYW1lPXNwX3NlYXJjaF90aGVtYXRpYyZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU&th=1">amazon.com</a></p>
+        <p>Amazon <br><a href="https://www.amazon.com/Preserved-Languages-Enchanted-Valentines-Christmas/dp/B091Q17CGW/ref=sxin_24_pa_sp_search_thematic_sspa?content-id=amzn1.sym.7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6%3Aamzn1.sym.7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6&crid=3VACMPYV2XF86&cv_ct_cx=mothers%2Bday%2Bgifts&keywords=mothers%2Bday%2Bgifts&pd_rd_i=B091Q17CGW&pd_rd_r=a703865d-4524-4e21-a560-4b80c1d3a018&pd_rd_w=7nW8v&pd_rd_wg=hk1Ai&pf_rd_p=7e1ef44b-32d3-4158-a6b3-ea8b2475a9e6&pf_rd_r=TE02Y8A1N5WZS9P5F82R&qid=1682778050&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=%2Caps%2C111&sr=1-2-f0df0a56-b883-423b-8e85-dd7f53bef7cf-spons&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExWUNaTVc5SFQwTlA2JmVuY3J5cHRlZElkPUEwMzUzMjgyM0w2RVVLRUZCSVpJWCZlbmNyeXB0ZWRBZElkPUEwNjc5MjQ1M01LSUxCVTVIRU4zVyZ3aWRnZXROYW1lPXNwX3NlYXJjaF90aGVtYXRpYyZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU&th=1" target="_blank">amazon.com</a></p>
         <img src="images/fitts-law.png" alt="amazon page">
         <p>Fitt’s law stipulates that the time required to move to a target area (e.g. click a button) is a function of the distance to the target and the size of the target. In other words, the bigger an object and the closer it is, the easier it is to use. In this image, we can see that what stands out the most are the purchase buttons, according to this law.</p>
        </section>
