accessibility and contrast errors fixed

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="line"></div>
         <ul>
             <li>Lesson 02: <a href="https://yuriro21.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
-            <li>Lesson 03: <a href=""></a>Title</li>
-            <li>Lesson 04: <a href=""></a>Title</li>
-            <li>Lesson 05: <a href=""></a>Title</li>
-            <li>Lesson 06: <a href=""></a>Title</li>
-            <li>Lesson 07: <a href=""></a>Title</li>
-            <li>Lesson 08: <a href=""></a>Title</li>
-            <li>Lesson 09: <a href=""></a>Title</li>
-            <li>Lesson 10: <a href=""></a>Title</li>
-            <li>Lesson 11: <a href=""></a>Title</li>
+            <li>Lesson 03: <a href="lesson3/chamber-commerce.html">Title</a></li>
+            <li>Lesson 04: <a href="lesson4/">Title</a></li>
+            <li>Lesson 05: <a href="lesson5/">Title</a></li>
+            <li>Lesson 06: <a href="lesson6/">Title</a></li>
+            <li>Lesson 07: <a href="lesson7/">Title</a></li>
+            <li>Lesson 08: <a href="lesson8/">Title</a></li>
+            <li>Lesson 09: <a href="lesson9/">Title</a></li>
+            <li>Lesson 10: <a href="lesson10/">Title</a></li>
+            <li>Lesson 11: <a href="lesson11/">Title</a></li>
         </ul>
     </main>
 
