--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="line"></div>
         <ul>
             <li>Lesson 02: <a href="https://yuriro21.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
-            <li>Lesson 03: <a href="lesson3/chamber-commerce.html">Title</a></li>
+            <li>Lesson 03: <a href="lesson3/site-plan.html">Title</a></li>
             <li>Lesson 04: <a href="lesson4/">Title</a></li>
             <li>Lesson 05: <a href="lesson5/">Title</a></li>
             <li>Lesson 06: <a href="lesson6/">Title</a></li>
