--- a/lesson3/site-plan.html
+++ b/lesson3/site-plan.html
@@ -19,7 +19,7 @@
         <h1>Cordero Chamber of Commerce Site Plan</h1>
     </header>
     <nav>
-        <a href="site-plan.html">Home</a></div>
+        <a href="site-plan.html">Home</a>
         <a href="audience.html">Target Audience</a>
         <a href="design.html">Design</a>
     </nav>
