--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="line"></div>
         <ul>
             <li>Lesson 02: <a href="https://yuriro21.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
-            <li>Lesson 03: <a href="https://yuriro21.github.io/wdd230/lesson3/site-plan.html">Chamber of Commerce</a></li>
-            <li>Lesson 04: <a href="lesson4/">Title</a></li>
+            <li>Lesson 03: <a href="https://yuriro21.github.io/wdd230/lesson3/site-plan.html">Chamber of Commerce site-plan</a></li>
+            <li>Lesson 04: <a href="lesson4/">Chamber of Commerce page</a></li>
             <li>Lesson 05: <a href="lesson5/">Title</a></li>
             <li>Lesson 06: <a href="lesson6/">Title</a></li>
             <li>Lesson 07: <a href="lesson7/">Title</a></li>
