--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -16,12 +16,12 @@
 </head>
 <body>
     <header>
-        <section class="asd">
+        <section class="first">
             <picture>
-                <img src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
+                <img id="logo" src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
             </picture>
             <h1>Cordero Chamber Of Commerce</h1>
-            <nav class="qwe">
+            <nav class="menu">
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="#">Home</a></li>
@@ -31,7 +31,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <div>
+            <div id="social">
                 <a href="https://www.facebook.com/" target="_blank">
                     <img src="images/facebook.png" alt="Facebook Icon" height="32px" width="32px">
                 </a>
@@ -40,8 +40,8 @@
                 </a>
             </div>
         </section>
-        <section>
-            <h1>time</h1>
+        <section class="second">
+            <span>Time</span>
         </section>
     </header>
     <main>
