--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -18,7 +18,7 @@
     <header>
         <section class="first">
             <picture>
-                <img id="logo" src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
+                <img class="logo" src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
             </picture>
             <h1>Cordero Chamber Of Commerce</h1>
             <nav class="menu">
@@ -71,7 +71,19 @@
         </section>
     </main>
     <footer>
-
+        <section>
+            <img class="logo" src="images/logo-cordero.png" alt="Logo Cordero chamber of Commerce">
+            <h1>Cordero Chamber of Commerce</h1>
+            <h2>Carrera Eludeterio Ch. Calle 11</h2>
+            <h3>Cordero, Tachira, Venezuela 5012</h3>
+            <a href="info@corderocc.org">info@corderocc.org</a>
+            <a href="tel:+582763961361">+(276)396 1361</a>
+            
+        </section>
+        <section>
+            <p>&copy; <span id="year"></span>Cordero Chamber | Edisson J. Ruiz | WDD 230 Project</p>
+            <p class="lastModif" id="lastModified"></p>
+        </section>
     </footer>
 <script src="scripts/chamber.js"></script>
 </body>
