--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -21,6 +21,15 @@
                 <img class="logo" src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
             </picture>
             <h1>Cordero Chamber Of Commerce</h1>
+            
+            <div id="social">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="images/facebook.png" alt="Facebook Icon" height="32px" width="32px">
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <img src="images/linkedin.png" alt="LinkedIn Icon" height="32px" width="32px">
+                </a>
+            </div>
             <nav class="menu">
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
@@ -31,14 +40,6 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <div id="social">
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook Icon" height="32px" width="32px">
-                </a>
-                <a href="https://www.linkedin.com/" target="_blank">
-                    <img src="images/linkedin.png" alt="LinkedIn Icon" height="32px" width="32px">
-                </a>
-            </div>
         </section>
         <section class="second">
             <span>Time</span>
@@ -71,16 +72,21 @@
         </section>
     </main>
     <footer>
-        <section>
+        <section class="first">
             <img class="logo" src="images/logo-cordero.png" alt="Logo Cordero chamber of Commerce">
-            <h1>Cordero Chamber of Commerce</h1>
-            <h2>Carrera Eludeterio Ch. Calle 11</h2>
-            <h3>Cordero, Tachira, Venezuela 5012</h3>
-            <a href="info@corderocc.org">info@corderocc.org</a>
-            <a href="tel:+582763961361">+(276)396 1361</a>
+            <div>
+                <h1>Cordero Chamber of Commerce</h1>
+                <h2>Carrera Eludeterio Ch. Calle 11</h2>
+                <h3>Cordero, Tachira, Venezuela 5012</h3>
+            </div>
+            <div>
+                <a href="info@corderocc.org">info@corderocc.org</a>
+                <a href="tel:+582763961361">+(276)396 1361</a>
+            </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1976.1865074424568!2d-72.18171163883189!3d7.855973453141017!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e666e5c4902f919%3A0xad5b51c7732f36e2!2sAlcaldia%20Del%20Municipio%20Andres%20Bello!5e0!3m2!1ses!2sus!4v1684213054934!5m2!1ses!2sus" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
         </section>
-        <section>
+        <section class="second">
             <p>&copy; <span id="year"></span>Cordero Chamber | Edisson J. Ruiz | WDD 230 Project</p>
             <p class="lastModif" id="lastModified"></p>
         </section>
