--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -42,7 +42,7 @@
             </nav>
         </section>
         <section class="second">
-            <span>Time</span>
+            <h1 id="currentime"></h1>
         </section>
     </header>
     <main>
