--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -62,13 +62,13 @@
             <h1>Join</h1>
         </section>
         <div class="spotlight">
-            <section id="Spotlight1">
+            <section class="spotlight1">
                 <h1>Spotlight 1</h1>
             </section>
-            <section id="Spotlight2">
+            <section class="spotlight2">
                 <h1>Spotlight 2</h1>
             </section>
-            <section id="Spotlight3">
+            <section class="spotlight3">
                 <h1>Spotlight 3</h1>
             </section>
         </div>
