--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -24,10 +24,10 @@
             
             <div id="social">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook Icon" height="32px" width="32px">
+                    <img src="images/facebook.png" alt="Facebook Icon">
                 </a>
                 <a href="https://www.linkedin.com/" target="_blank">
-                    <img src="images/linkedin.png" alt="LinkedIn Icon" height="32px" width="32px">
+                    <img src="images/linkedin.png" alt="LinkedIn Icon">
                 </a>
             </div>
             <nav class="menu">
