--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -33,7 +33,7 @@
             <nav class="menu">
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Home</a></li>
                     <li><a href="#">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
@@ -89,7 +89,7 @@
             <div id="ftext">
                 <p>info@corderocc.org</p>
                 <p>+58 (276) 396 1361</p>
-                <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2">📍 Location Map</a> 
+                <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
         <section class="footer2">
