--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Assignment Chamber of Commerce page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Cordero Chamber Commerce</title>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
