--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -63,10 +63,10 @@
             <h1>Join</h1>
         </section>
         <div class="spotlight">
-            <section class="spotlight1">
+            <section class="spotlight1" id="sport1">
                 <h1>Spotlight 1</h1>
             </section>
-            <section class="spotlight2">
+            <section class="spotlight2" id="sport2">
                 <h1>Spotlight 2</h1>
             </section>
             <section class="spotlight3">
