--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Lesson 02: <a href="https://yuriro21.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 03: <a href="https://yuriro21.github.io/wdd230/lesson3/site-plan.html">Chamber of Commerce site-plan</a></li>
             <li>Lesson 04: <a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Chamber of Commerce page</a></li>
-            <li>Lesson 05: <a href="lesson5/">Title</a></li>
+            <li>Lesson 05: <a href="https://yuriro21.github.io/wdd230/lesson5/bom.html">Book of Mormon</a></li>
             <li>Lesson 06: <a href="lesson6/">Title</a></li>
             <li>Lesson 07: <a href="lesson7/">Title</a></li>
             <li>Lesson 08: <a href="lesson8/">Title</a></li>
