--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/bom.css">
 </head>
 <body>
-    <h1>📖 Book of Mormon - Top 10</h1>
+    <h1>📖 Book of Mormon - Top 25</h1>
     <main>
         <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" placeholder="Alma 5" value="Alma 5">
+        <input type="text" id="favchap" placeholder="" value="">
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
