--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -15,6 +15,11 @@
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
+    <footer>
+        <footer>
+            <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</p>
+        </footer>
+    </footer>
 <script src="scripts/bom.js"></script>
 </body>
 </html>
