--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -47,14 +47,23 @@
         </section>
     </header>
     <main>
-        <section id="hero">
-            <h1>Hero with site name and call to action</h1>
-        </section>
+        <div id="hero">
+            <div id="=herobox">
+                <img id="imgcordero" src="images/cordero.jpg" alt="Cordero city">
+            </div>
+            <section id="welcome">
+                <h1>Welcome to Cordero</h1>
+            </section>
+            <section>
+                <button id="herobutton" type="button">Join the Chamber</button>
+            </section>          
+        </div>
         <section id="event">
             <h1>Event</h1>
         </section>
         <section id="weather">
             <h1>Weather</h1>
+            
         </section>
         <section id="news">
             <h1>News ReLease</h1>
