--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bom</title>
+    <meta name="Description" content="Assignment Book of Mormon for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Book of Mormon</title>
     <link rel="stylesheet" href="styles/bom.css">
 </head>
 <body>
@@ -15,11 +16,11 @@
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
+    
     <footer>
-        <footer>
-            <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</p>
-        </footer>
+        <p>&copy; <span id="year"></span> .:|:. Edisson J. Ruiz .:|:. Provo, Utah</p>
     </footer>
+    
 <script src="scripts/bom.js"></script>
 </body>
 </html>
