--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -59,11 +59,24 @@
             </section>          
         </div>
         <section id="event">
-            <h1>Event</h1>
+            <h1>Entrepreneur Day</h1>
+            <h2>Youth Speak Forum.</h2>
+            <p>Join us for the grand Youth Speak Forum, Thursday 7pm <a href="#">more info...</a></p>
         </section>
         <section id="weather">
-            <h1>Weather</h1>
-            
+            <div>
+                <h1>Weather</h1>
+            </div>
+            <div id="temperature">
+                <img id="img-weather" src="images/clima.png" alt="Weather">
+                <h1>33°C</h1>
+            </div>
+            <h1>Partly Cloudy</h1>
+            <div id="w-line"></div>
+            <div>
+                <h2>Wind Speed:    2.5 km/h</h2>
+                <h2>Wind Chill:    N/A</h2>
+            </div>            
         </section>
         <section id="news">
             <h1>News ReLease</h1>
@@ -97,8 +110,8 @@
         
             <div class="line"></div>
             <div id="ftext">
-                <p>info@corderocc.org</p>
-                <p>+58 (276) 396 1361</p>
+                <a class="footer-a" href="info@corderocc.org">info@corderocc.org</a>
+                <a class="footer-a" href="+58 (276) 396 1361">+58 (276) 396 1361</a>
                 <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
