--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -61,7 +61,7 @@
         <section id="event">
             <h1>Entrepreneur Day</h1>
             <h2>Youth Speak Forum.</h2>
-            <p>Join us for the grand Youth Speak Forum, Thursday 7pm <a href="#">more info...</a></p>
+            <p>Join us for the grand Youth Speak Forum, where we share ideas and projects to promote entrepreneurship  Thursday 7pm <a href="#">more info...</a></p>
         </section>
         <section id="weather">
             <div>
@@ -74,15 +74,19 @@
             <h1>Partly Cloudy</h1>
             <div id="w-line"></div>
             <div>
-                <h2>Wind Speed:    2.5 km/h</h2>
-                <h2>Wind Chill:    N/A</h2>
+                <h3>Wind Speed:    2.5 km/h</h3>
+                <h3>Wind Chill:    N/A</h3>
             </div>            
         </section>
         <section id="news">
-            <h1>News ReLease</h1>
+            <h1>Sports activities on the occasion of the 44th anniversary</h1>
+            <p>On the occasion of the 44th anniversary of the creation of the Cordero GD Víctor Anselmo Fernández Escoba National Guard Training School, sports activities were carried out.
+                Among the activities to highlight were the Thirty-seventh Intercompany Games, where the disciplines of softball, futsal, kickingball, volleyball and 8k marathon were played.               
+                The acts were chaired by the GB Hernán Dionisio Rincón Paz, director of the school, together with Edward Sarmiento, deputy director of the house of studies.</p>
         </section>
         <section id="join">
-            <h1>Join</h1>
+            <button class="button" type="button">Join Us!</button>
+            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </section>
         <div class="spotlight">
             <section class="spotlight1" id="sport1">
