--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -90,7 +90,12 @@
         </section>
         <div class="spotlight">
             <section class="spotlight1" id="sport1">
-                <h1>Spotlight 1</h1>
+                <h1>Ferreteria la Minita</h1>
+                <img class="img-spot" src="images/ferreteria.png" alt="ferreteria la Minita">
+                <p>"Everything for construction."</p>
+                <div class="line2"></div>                
+                <a class="footer-a" href="iferreminita@gmail.com">ferreminita@gmail.com</a>
+                <a class="footer-a" href="+58 (414) 704 0789">+58 (414) 704 0789</a>
             </section>
             <section class="spotlight2" id="sport2">
                 <h1>Spotlight 2</h1>
