--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -61,7 +61,7 @@
         <section id="event">
             <h1>Entrepreneur Day</h1>
             <h2>Youth Speak Forum.</h2>
-            <p>Join us for the grand Youth Speak Forum, where we share ideas and projects to promote entrepreneurship  Thursday 7pm <a href="#">more info...</a></p>
+            <p>Join us for the grand Youth Speak Forum, where we share ideas and projects to promote entrepreneurship  Thursday 7pm <br><br><a href="#">more info...</a></p>
         </section>
         <section id="weather">
             <div>
@@ -90,7 +90,7 @@
         </section>
         <div class="spotlight">
             <section class="spotlight1" id="sport1">
-                <h1>Ferreteria la Minita</h1>
+                <h1>Ferreteria la Minita C.A.</h1>
                 <img class="img-spot" src="images/ferreteria.png" alt="ferreteria la Minita">
                 <p>"Everything for construction."</p>
                 <div class="line2"></div>                
