--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -95,7 +95,7 @@
                 <p>"Everything for construction."</p>
                 <div class="line2"></div>                
                 <a class="footer-a" href="iferreminita@gmail.com">ferreminita@gmail.com</a>
-                <a class="footer-a" href="+58 (414) 704 0789">+58 (414) 704 0789</a>
+                <a class="footer-a" href="+584147040789">+58 (414) 704 0789</a>
             </section>
             <section class="spotlight2" id="sport2">
                 <h1>Spotlight 2</h1>
@@ -120,7 +120,7 @@
             <div class="line"></div>
             <div id="ftext">
                 <a class="footer-a" href="info@corderocc.org">info@corderocc.org</a>
-                <a class="footer-a" href="+58 (276) 396 1361">+58 (276) 396 1361</a>
+                <a class="footer-a" href="+582763961361">+58 (276) 396 1361</a>
                 <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
