--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -21,7 +21,7 @@
             <picture>
                 <img class="logo" src="images/logo-cordero.png" alt="Logo Cordero Chamber Commerce">
             </picture>        
-            <h1>Cordero Chamber Of Commerce</h1>
+            <h1 id="cordero-title">Cordero Chamber Of Commerce</h1>
             
             <div id="social">
                 <a href="https://www.facebook.com/" target="_blank">
@@ -98,10 +98,20 @@
                 <a class="footer-a" href="+584147040789">+58 (414) 704 0789</a>
             </section>
             <section class="spotlight2" id="sport2">
-                <h1>Spotlight 2</h1>
+                <h1>Farmacia Leydicar</h1>
+                <img class="img-spot" src="images/farma.png" alt="farmacy Leydicar">
+                <p>"Your well-being is our priority"</p>
+                <div class="line2"></div>                
+                <a class="footer-a" href="farmaleydicar@gmail.com">farmaleydicar@gmail.com</a>
+                <a class="footer-a" href="+582763961714">+58 (276) 396 1714</a>
             </section>
             <section class="spotlight3">
-                <h1>Spotlight 3</h1>
+                <h1>El Merendero</h1>
+                <img class="img-spot" src="images/restaurant.jpg" alt="restaurant el Merendero">
+                <p>"We take care of your food, we take care of you."</p>
+                <div class="line2"></div>                
+                <a class="footer-a" href="elmerendero@gmail.com">elmerendero@gmail.com</a>
+                <a class="footer-a" href="+584247820465">+58 (424)782 0465</a>
             </section>
         </div>
 
