--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Lesson 03: <a href="https://yuriro21.github.io/wdd230/lesson3/site-plan.html">Chamber of Commerce site-plan</a></li>
             <li>Lesson 04: <a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Chamber of Commerce page</a></li>
             <li>Lesson 05: <a href="https://yuriro21.github.io/wdd230/lesson5/bom.html">Book of Mormon</a></li>
-            <li>Lesson 06: <a href="lesson6/">Title</a></li>
+            <li>Lesson 06: <a href="https://yuriro21.github.io/wdd230/lesson6/index.html">Responsive Images</a></li>
             <li>Lesson 07: <a href="lesson7/">Title</a></li>
             <li>Lesson 08: <a href="lesson8/">Title</a></li>
             <li>Lesson 09: <a href="lesson9/">Title</a></li>
