--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -71,14 +71,14 @@
             </div>
             <div id="temperature">
                 <img id="img-weather" src="images/clima.webp" alt="Weather">
-                <span class="gradesf">10</span>
-                <p class="gradesf">&deg;F</p>
+                <span id="gradesf">20</span>
+                <p id="gradesftext">&deg;F</p>
             </div>
             <h1>Partly Cloudy</h1>
             <div id="w-line"></div>
             <div>
-                <h3>Wind Speed: <span id="mph">12</span> mph</h3>
-                <h3>Wind Chill: <span id="windchill">N/A</span></h3>
+                <h3>Wind Speed: <span id="mph">12</span> mph </h3>
+                <h3>Wind Chill: <span id="windchill"></span> </h3>
             </div>            
         </section>
         <section id="news">
@@ -145,5 +145,6 @@
         </section>
     </footer>
 <script src="scripts/chamber.js"></script>
+<script src="scripts/windchill.js"></script>
 </body>
 </html>
