--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -43,7 +43,7 @@
             </nav>
         </section>
         <section class="second">
-            <h1 id="currentime"></h1>
+            <h1 id="currentime">#</h1>
         </section>
     </header>
     <main>
@@ -56,9 +56,9 @@
             <section id="welcome">
                 <h1>Welcome to Cordero</h1>
             </section>
-            <section>
+            <div>
                 <button id="herobutton" type="button">Join the Chamber</button>
-            </section>          
+            </div>          
         </div>
         <section id="event">
             <h1>Entrepreneur Day</h1>
@@ -71,7 +71,7 @@
             </div>
             <div id="temperature">
                 <img id="img-weather" src="images/clima.webp" alt="Weather">
-                <span id="gradesf">20</span>
+                <span id="gradesf">7</span>
                 <p id="gradesftext">&deg;F</p>
             </div>
             <h1>Partly Cloudy</h1>
@@ -87,10 +87,10 @@
                 Among the activities to highlight were the Thirty-seventh Intercompany Games, where the disciplines of softball, futsal, kickingball, volleyball and 8k marathon were played.               
                 The acts were chaired by the GB Hernán Dionisio Rincón Paz, director of the school, together with Edward Sarmiento, deputy director of the house of studies.</p>
         </section>
-        <section id="join">
+        <div id="join">
             <button class="button" type="button">Join Us!</button>
             <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
-        </section>
+        </div>
         <div class="spotlight">
             <section class="spotlight1" id="sport1">
                 <h1>Ferreteria la Minita C.A.</h1>
@@ -137,12 +137,12 @@
                 <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
-        <section class="footer2">
+        <div class="footer2">
             <p>&copy; <span id="year"></span> Cordero Chamber</p>
             <p> Edisson J. Ruiz</p>
             <p> WDD 230 Project</p>
             <p class="lastModif" id="lastModified"></p>
-        </section>
+        </div>
     </footer>
 <script src="scripts/chamber.js"></script>
 <script src="scripts/windchill.js"></script>
