--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -18,21 +18,21 @@
         </tr>
         <tr>
             <td>Feature 1</td>
-            <td class="yes">&#10003</td>
-            <td class="yes">&#10003</td>
-            <td class="yes">&#10003</td>
+            <td class="yes">&#10003;</td>
+            <td class="yes">&#10003;</td>
+            <td class="yes">&#10003;</td>
         </tr>
         <tr>
             <td>Feature 2</td>
-            <td class="not">&#10005</td>
-            <td class="yes">&#10003</td>
-            <td class="yes">&#10003</td>
+            <td class="not">&#10005;</td>
+            <td class="yes">&#10003;</td>
+            <td class="yes">&#10003;</td>
         </tr>
         <tr>
             <td>Feature 3</td>
-            <td class="not">&#10005</td>
-            <td class="not">&#10005</td>
-            <td class="yes">&#10003</td>
+            <td class="not">&#10005;</td>
+            <td class="not">&#10005;</td>
+            <td class="yes">&#10003;</td>
         </tr>
     </table>
     <footer>
