--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -11,7 +11,7 @@
     <table>
         <caption>ACME Wildwest Services</caption>
         <tr id="headt">
-            <th style="background-color: black;"></th>
+            <th style="background-color: black;">&nbsp;</th>
             <th>Basic</th>
             <th>Premium</th>
             <th>Deluxe</th>
