--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 05: <a href="https://yuriro21.github.io/wdd230/lesson5/bom.html">Book of Mormon</a></li>
             <li>Lesson 06: <a href="https://yuriro21.github.io/wdd230/lesson6/index.html">Responsive Images</a></li>
             <li>Lesson 07: <a href="https://yuriro21.github.io/wdd230/lesson7/lazyload.html">Lazyload</a></li>
-            <li>Lesson 08: <a href="lesson8/">Title</a></li>
+            <li>Lesson 08: <a href="https://yuriro21.github.io/wdd230/lesson8/tablebuild.html/">Table Build</a></li>
             <li>Lesson 09: <a href="lesson9/">Title</a></li>
             <li>Lesson 10: <a href="lesson10/">Title</a></li>
             <li>Lesson 11: <a href="lesson11/">Title</a></li>
