--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -10,32 +10,30 @@
 </head>
 <body>
 
-    <h1>Progressive Loading (Images)</h1>
-
+    <h1>Progressive Loading (Images)</h1> 
+    
     <picture>
-        <div>
-            <img class="imgs" src="images/rsz_one.jpg" alt="Fist Image">        
-        </div>
-        <div>
-            <img class="imgs" src="images/rsz_1two.jpg" alt="Second Image">
-        </div> 
-        <div>
-            <img class="imgs" src="images/rsz_three.jpg" alt="Third Image">
-        </div>  
-        <div>
-            <img class="imgs" src="images/rsz_1four.jpg" alt="Fourth Image">
-        </div>
-        <div>
-            <img class="imgs" src="images/rsz_1five.jpg" alt="Fifth Image">
-        </div> 
-        <div>
-            <img class="imgs" src="images/rsz_six.jpg" alt="Sixth Image">
-        </div>   
-        <div>
-            <img class="imgs" src="images/rsz_1seven.jpg" alt="Seventh Image">
-        </div>   
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_one.jpg" alt="Fist Image">        
     </picture>
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_1two.jpg" alt="Second Image">
+    </picture> 
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_three.jpg" alt="Third Image">
+    </picture>  
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_1four.jpg" alt="Fourth Image">
+    </picture>
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_1five.jpg" alt="Fifth Image">
+    </picture> 
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_six.jpg" alt="Sixth Image">
+    </picture>   
+    <picture>
+        <img class="imgs" src="images/placeholder.png" data-src="images/rsz_1seven.jpg" alt="Seventh Image">
+    </picture>   
 
-<script src="scripts/lazyload.js"></script>
+<script src="scripts/lazyload.js" defer></script>
 </body>
 </html>
