--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -12,7 +12,7 @@
     <h1>📖 Book of Mormon - Top 25</h1>
     <main>
         <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" placeholder="" value="">
+        <input type="text" id="favchap" placeholder="" value="" required>
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
