--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -47,6 +47,7 @@
         </section>
     </header>
     <main>
+        <div id="banner"></div>
         <div id="hero">
             <picture>
                 <source srcset="images/wdd230-org-1200.jpg" media="(min-width: 1200px)">
