--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -35,7 +35,7 @@
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Home</a></li>
-                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="https://yuriro21.github.io/wdd230/lesson4/discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
